Product simple logic added